--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
     "name": "My App",
     "short_name": "App",
-    "start_url": "index.html",
+    "start_url": "/nguyensunone.github.io/index.html",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#000000",
     "icons": [
         {
-            "src": "icon-192x192.png",
+            "src": "/nguyensunone.github.io/icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         }
