--- a/LESSON/mapping_GiaoTiepMy01.json
+++ b/LESSON/mapping_GiaoTiepMy01.json
@@ -276,7 +276,7 @@
         "file": "audio_GiaoTiepMy01/audio_GiaoTiepMy01_35_col0.mp3"
     },
     {
-        "text": "It's called a \"pen.\"",
+        "text": "It's called a pen.",
         "file": "audio_GiaoTiepMy01/audio_GiaoTiepMy01_35_col3.mp3"
     },
     {
@@ -412,7 +412,7 @@
         "file": "audio_GiaoTiepMy01/audio_GiaoTiepMy01_52_col0.mp3"
     },
     {
-        "text": "The password is \"welcome123\".",
+        "text": "The password is welcome123.",
         "file": "audio_GiaoTiepMy01/audio_GiaoTiepMy01_52_col3.mp3"
     },
     {
@@ -436,7 +436,7 @@
         "file": "audio_GiaoTiepMy01/audio_GiaoTiepMy01_55_col0.mp3"
     },
     {
-        "text": "Sure, I recommend \"The Alchemist.\"",
+        "text": "Sure, I recommend The Alchemist.",
         "file": "audio_GiaoTiepMy01/audio_GiaoTiepMy01_55_col3.mp3"
     },
     {
